versioned_docs/version-22.3/reference/rpk/rpk-acl/rpk-acl-user.mdx
---
title: rpk acl user
---

<head>
  <meta name="title" content="rpk acl user | Redpanda Docs" />
  <meta name="description" content="rpk acl user" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-acl/rpk-acl-user/" />
</head>

Manage SCRAM users.

If SCRAM is enabled, a SCRAM user is what you use to talk to Redpanda, and ACLs
control what your user has access to. See `rpk acl --help` for more information
about ACLs, and `rpk acl user create --help` for more information about
creating SCRAM users. Using SCRAM requires setting `kafka_enable_authorization: true` and `authentication_method: sasl` in the
redpanda section of your `redpanda.yaml`, and setting `sasl_mechanisms` with `SCRAM` for your Redpanda cluster.

### Usage

```
rpk acl user [command]
```

### Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>--api-urls</td>
      <td>strings</td>
      <td>
        The comma-separated list of Admin API addresses (&lt;ip&gt;:&lt;port&gt;). You
        must specify one for each node.
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for user.</td>
    </tr>
  </tbody>
</table>
