versioned_docs/version-23.1/reference/rpk/rpk-acl/rpk-acl-user.mdx
---
title: rpk acl user
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk acl user | Redpanda Docs" />
  <meta name="description" content="rpk acl user" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-acl/rpk-acl-user/" />
</head>

Manage SCRAM users.

If SCRAM is enabled, a SCRAM user is what you use to talk to Redpanda, and ACLs
control what your user has access to. See `rpk acl --help` for more information
about ACLs, and `rpk acl user create --help` for more information about
creating SCRAM users. Using SCRAM requires setting `kafka_enable_authorization: true` and `authentication_method: sasl` in the
redpanda section of your `redpanda.yaml`, and setting `sasl_mechanisms` with `SCRAM` for your Redpanda cluster.

## Usage

```bash
rpk acl user [command]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>--api-urls</td>
      <td>strings</td>
      <td>
        The comma-separated list of Admin API addresses (&lt;ip&gt;:&lt;port&gt;). You
        must specify one for each node.
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for user.</td>
    </tr>
    <tr>
      <td>--admin-api-tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Admin API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the Admin
        API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-truststore</td>
      <td>string</td>
      <td>
        The truststore to be used for TLS communication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--brokers</td>
      <td>strings</td>
      <td>
        Comma-separated list of broker ip:port pairs (e.g. --brokers
        '192.168.78.34:9092,192.168.78.35:9092,192.179.23.54:9092').
        Alternatively, you may set the REDPANDA_BROKERS environment variable
        with the comma-separated list of broker addresses.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda config file, if not set the file will be searched for in the
        default locations.
      </td>
    </tr>
    <tr>
      <td>--password</td>
      <td>string</td>
      <td>SASL password to be used for authentication.</td>
    </tr>
    <tr>
      <td>--sasl-mechanism</td>
      <td>string</td>
      <td>
        The authentication mechanism to use. Supported values: SCRAM-SHA-256,
        SCRAM-SHA-512.
      </td>
    </tr>
    <tr>
      <td>--tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Kafka API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-truststore</td>
      <td>string</td>
      <td>The truststore to be used for TLS communication with the broker.</td>
    </tr>
    <tr>
      <td>--user</td>
      <td>string</td>
      <td>SASL user to be used for authentication.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging (default: false).</td>
    </tr>
  </tbody>
</table>
